<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:components="http://schemas.android.com/apk/res-auto"
    android:gravity="bottom|fill_vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/splashPgBg"

    android:id="@+id/linearSplash"
    android:theme="@style/TextAppearance.AppCompat.Widget.ActionMode.Title">

    <!-- <com.bestfare.pack.GIFView
         android:layout_width="250dp"
         android:layout_height="345dp"
         android:id="@+id/gifview"
 android:layout_marginTop="50dp"
         android:layout_above="@+id/textViewLoading"
         android:layout_centerHorizontal="true" />
 -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/app_name"
        android:id="@+id/name"
        android:textSize="32dp"

        android:layout_marginLeft="90dp"

        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="@string/common_signin_button_text"
        android:theme="@style/TextAppearance.AppCompat.Headline" />

    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@drawable/icon"
        android:id="@+id/logo"
        android:layout_below="@+id/name"
        android:layout_centerHorizontal="true"

        android:layout_marginTop="120dp"
        android:layout_marginLeft="-70dp"
        android:layout_gravity="center_vertical" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/tag"
    android:text="@string/tag"
    android:layout_below="@+id/logo"
    android:textStyle="bold|italic"
    android:layout_centerHorizontal="true"

android:textSize="15sp"
    android:layout_marginTop="35dp"
    android:layout_marginLeft="90dp"

    />

    <Button
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:text="@string/singnUp"
        android:id="@+id/signUpButton"
        android:visibility="invisible"
        android:background="@drawable/button_layout"
        android:layout_below="@+id/tag"
        android:layout_alignRight="@+id/name"
        android:layout_alignEnd="@+id/name"
        android:layout_centerHorizontal="true"
        />
    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/signIn"
        android:id="@+id/signIn"
        android:layout_below="@+id/signUpButton"
android:background="@color/splashPgBg"
        android:textSize="25dp"
        android:visibility="invisible"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/terms"
        android:id="@+id/terms"
        android:layout_below="@+id/signIn"

        android:textSize="18dp"
        android:visibility="invisible"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"/>




</RelativeLayout>