<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_bg"
    android:id="@+id/registerLayout"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/container_toolbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            />
</LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_marginTop="51dp">

        <!-- Name Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:id="@+id/input_name">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/user_name" />
        </android.support.design.widget.TextInputLayout>
        <!-- Mobile num Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:id="@+id/input_contactNum">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text|phone"
                android:hint="@string/mobile_num" />
        </android.support.design.widget.TextInputLayout>
        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:id="@+id/input_email">

        </android.support.design.widget.TextInputLayout>

        <!-- Gender Label -->
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/gender_arrays"
            android:prompt="@string/gender_prompt"
            android:id="@+id/input_gender"></Spinner>
        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/input_password">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/hint_password"/>
        </android.support.design.widget.TextInputLayout>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/termsCheck"/>
        <TextView
            android:id="@+id/termsandpolicy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_policy"
            android:layout_marginTop="-24dp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="29dp"
            />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="-5dp"
            android:padding="12dp"
            android:layout_below="@+id/termsandpolicy"
            android:text="@string/signIn"
            android:background="@color/splashPgBg"/>


        </LinearLayout>


    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_margin="2dp"
         />
    />
</android.support.design.widget.CoordinatorLayout>
