<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_bg"
    android:id="@+id/otpLayout"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/container_toolbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/icon"
            android:id="@+id/logo_otp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="-142dp"
            android:layout_marginLeft="110dp"
             />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:id="@+id/otp_text"
            android:layout_marginLeft="-170dp"
            android:layout_marginTop="-50dp"
            android:text="@string/otp_text"
            android:layout_gravity="center_vertical"
            android:layout_below="@+id/logo_otp"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:layout_marginLeft="-270dp"
            android:text="@string/otp_text2"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="8dp"
            android:layout_below="@+id/otp_text"
            android:layout_centerHorizontal="true"/>

        <EditText
            android:layout_width="110dp"
            android:layout_height="51dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="-200dp"
            android:layout_marginBottom="70dp"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/otp"
            android:hint="@string/otp_hint"
            android:background="@drawable/otp_box_shape"
            android:inputType="phone"
            android:layout_gravity="bottom"
            />
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:layout_marginLeft="20dp"
            android:indeterminateTint="@color/colorAccent"
            android:indeterminateTintMode="src_atop"
            android:visibility="visible" />
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_otp_verification"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:layout_marginLeft="-250dp"
            android:padding="12dp"
            android:layout_below="@+id/otp"
            android:text="@string/verifyme"
            android:background="@color/splashPgBg"
            android:layout_gravity="bottom" />


    </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>